--- a/jupyter/Real NVP distribution 2d example.ipynb
+++ b/jupyter/Real NVP distribution 2d example.ipynb
@@ -95,8 +95,8 @@
     "\n",
     "x = np.stack((mesh_x.ravel(), mesh_y.ravel()), axis=1)\n",
     "target_Q = example.session.run(\n",
-    "  example.target_Q,\n",
-    "  feed_dict={example.target_Q_input_ph: x}\n",
+    "  example.policy_distribution.log_target,\n",
+    "  feed_dict={example.policy_distribution.x_placeholder: x}\n",
     ").reshape(mesh_x.shape)\n",
     "p_z = np.exp(target_Q)\n",
     "\n",
