Adds squash functions to real nvp

--- a/jupyter/Real NVP distribution 2d example.ipynb
+++ b/jupyter/Real NVP distribution 2d example.ipynb
@@ -96,7 +96,7 @@
     "x = np.stack((mesh_x.ravel(), mesh_y.ravel()), axis=1)\n",
     "target_Q = example.session.run(\n",
     "  example.policy_distribution.log_target,\n",
-    "  feed_dict={example.policy_distribution.x_placeholder: x}\n",
+    "  feed_dict={example.policy_distribution.z: x}\n",
     ").reshape(mesh_x.shape)\n",
     "p_z = np.exp(target_Q)\n",
     "\n",
