Update realnvp unsupervised example

--- a/jupyter/Real NVP unsupervised example.ipynb
+++ b/jupyter/Real NVP unsupervised example.ipynb
@@ -31,7 +31,7 @@
     "from sklearn.mixture import GaussianMixture\n",
     "from sklearn.datasets import make_moons\n",
     "\n",
-    "from examples.real_nvp_unsupervised_example import RealNVP2UnsupervisedlExample\n",
+    "from examples.real_nvp_unsupervised_example import RealNVP2UnsupervisedExample\n",
     "\n",
     "%matplotlib inline\n",
     "\n",
@@ -58,7 +58,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "x_train, _ = make_moons(n_samples=30000,\n",
+    "x_train, _ = make_moons(n_samples=50000,\n",
     "                        shuffle=True,\n",
     "                        noise=0.1,\n",
     "                        random_state=SEED)"
@@ -74,7 +74,7 @@
     "fig.subplots_adjust(left=0.12, right=0.97,\n",
     "                    bottom=0.21, top=0.9, wspace=0.5)\n",
     "ax = fig.add_subplot(111)\n",
-    "ax.plot(x_train[:, 0], x_train[:, 1], '.b')\n",
+    "ax.plot(x_train[:, 0], x_train[:, 1], '.b', markersize=0.25)\n",
     "ax.text(0.04, 0.96, \"Half moons\",\n",
     "        ha='left', va='top', transform=ax.transAxes)\n",
     "ax.set_xlabel('$x_{1}$')\n",
@@ -92,10 +92,31 @@
    },
    "outputs": [],
    "source": [
+    "tf.reset_default_graph()\n",
+    "\n",
+    "%matplotlib notebook\n",
+    "\n",
+    "subplots = figs, axs = plt.subplots(2, 2, figsize=(14, 14))\n",
+    "plt.ion()\n",
+    "\n",
+    "axs[0][0].set_xlim(-1.5, 2.5)\n",
+    "axs[0][0].set_ylim(-1.0, 1.5)\n",
+    "\n",
+    "axs[0][1].set_xlim(-2.5, 2.5)\n",
+    "axs[0][1].set_ylim(-2.5, 2.5)\n",
+    "\n",
+    "axs[1][0].set_xlim(-1.5, 2.5)\n",
+    "axs[1][0].set_ylim(-1.0, 1.5)\n",
+    "\n",
+    "axs[1][1].set_xlim(-2.5, 2.5)\n",
+    "axs[1][1].set_ylim(-2.5, 2.5)\n",
+    "\n",
+    "fig.canvas.draw()\n",
+    "\n",
     "real_nvp_config = {\n",
     "  \"mode\": \"train\",\n",
     "  \"D_in\": 2,\n",
-    "  \"learning_rate\": 5e-3,\n",
+    "  \"learning_rate\": 5e-2,\n",
     "  \"scale_regularization\": 0.0, # 5e-2,\n",
     "  \"num_coupling_layers\": 4,\n",
     "  \"translation_hidden_sizes\": (25,),\n",
@@ -103,34 +124,15 @@
     "  \"squash\": False\n",
     "}\n",
     "\n",
-    "tf.reset_default_graph()\n",
-    "\n",
-    "%matplotlib notebook\n",
-    "\n",
-    "subplots = figs, axs = plt.subplots(1, 2, figsize=(14, 7))\n",
-    "plt.ion()\n",
-    "\n",
-    "axs[0].set_xlim(-1.5, 2.5)\n",
-    "axs[0].set_ylim(-1.0, 1.5)\n",
-    "\n",
-    "axs[1].set_xlim(-2.5, 2.5)\n",
-    "axs[1].set_ylim(-2.5, 2.5)\n",
-    "\n",
-    "fig.canvas.draw()\n",
-    "\n",
-    "example = RealNVP2UnsupervisedlExample(\n",
+    "example = RealNVP2UnsupervisedExample(\n",
     "    real_nvp_config=real_nvp_config,\n",
     "    x_train=x_train,\n",
-    "    subplots=subplots)\n",
+    "    subplots=subplots,\n",
+    "    plot_every=100,\n",
+    "    num_epochs=20,\n",
+    ")\n",
     "example.run()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
