Update unsupervised example to use RealNVPBijector

--- a/jupyter/Real NVP unsupervised example.ipynb
+++ b/jupyter/Real NVP unsupervised example.ipynb
@@ -113,26 +113,35 @@
     "\n",
     "fig.canvas.draw()\n",
     "\n",
-    "real_nvp_config = {\n",
+    "training_config = {\n",
     "  \"mode\": \"train\",\n",
     "  \"D_in\": 2,\n",
-    "  \"learning_rate\": 5e-2,\n",
-    "  \"scale_regularization\": 0.0, # 5e-2,\n",
+    "  \"learning_rate\": 5e-3,\n",
+    "}\n",
+    "real_nvp_config = {\n",
+    "  \"scale_regularization\": 0.0,\n",
     "  \"num_coupling_layers\": 4,\n",
     "  \"translation_hidden_sizes\": (25,),\n",
-    "  \"scale_hidden_sizes\": (25,),\n",
-    "  \"squash\": False\n",
+    "  \"scale_hidden_sizes\": (25,)\n",
     "}\n",
     "\n",
     "example = RealNVP2UnsupervisedExample(\n",
-    "    real_nvp_config=real_nvp_config,\n",
     "    x_train=x_train,\n",
     "    subplots=subplots,\n",
+    "    training_config=training_config,\n",
+    "    real_nvp_config=real_nvp_config,\n",
     "    plot_every=100,\n",
     "    num_epochs=20,\n",
     ")\n",
     "example.run()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
