--- a/jupyter/2d RL example.ipynb
+++ b/jupyter/2d RL example.ipynb
@@ -83,11 +83,11 @@
     "policy_config = {\n",
     "    \"mode\": \"train\",\n",
     "    \"D_in\": 2,\n",
-    "    \"learning_rate\": 1e-4,\n",
+    "    \"learning_rate\": 5e-4,\n",
     "    \"squash\": False,\n",
     "    \"real_nvp_config\": {\n",
-    "        \"scale_regularization\": 0.0, # 5e-2,\n",
-    "        \"num_coupling_layers\": 2,\n",
+    "        \"scale_regularization\": 1e-6,\n",
+    "        \"num_coupling_layers\": 4,\n",
     "        \"translation_hidden_sizes\": (16,),\n",
     "        \"scale_hidden_sizes\": (16,),\n",
     "    }\n",
