RL example config tweaks
* Move num_epochs, num_steps_per_epoch, and batch_size to
  RealNVP2dRlExample args
* hidden_sizes 16 -> 32

--- a/jupyter/2d RL example.ipynb
+++ b/jupyter/2d RL example.ipynb
@@ -88,14 +88,17 @@
     "    \"real_nvp_config\": {\n",
     "        \"scale_regularization\": 1e-6,\n",
     "        \"num_coupling_layers\": 4,\n",
-    "        \"translation_hidden_sizes\": (16,),\n",
-    "        \"scale_hidden_sizes\": (16,),\n",
+    "        \"translation_hidden_sizes\": (32,),\n",
+    "        \"scale_hidden_sizes\": (32,),\n",
     "    }\n",
     "}\n",
     "\n",
     "example = RealNVP2dRlExample(subplots,\n",
     "                             WEIGHTS, MEANS, VARIANCES,\n",
-    "                             policy_config=policy_config)\n",
+    "                             policy_config=policy_config,\n",
+    "                             batch_size=64,\n",
+    "                             num_epochs=1000,\n",
+    "                             num_steps_per_epoch=100)\n",
     "example.run()"
    ]
   },
