Update 2d RL example params

--- a/jupyter/2d RL example.ipynb
+++ b/jupyter/2d RL example.ipynb
@@ -84,9 +84,9 @@
     "    \"mode\": \"train\",\n",
     "    \"D_in\": 2,\n",
     "    \"learning_rate\": 5e-4,\n",
-    "    \"squash\": False,\n",
+    "    \"squash\": True,\n",
     "    \"real_nvp_config\": {\n",
-    "        \"scale_regularization\": 1e-6,\n",
+    "        \"scale_regularization\": 1e-5,\n",
     "        \"num_coupling_layers\": 4,\n",
     "        \"translation_hidden_sizes\": (32,),\n",
     "        \"scale_hidden_sizes\": (32,),\n",
