Update rl example

--- a/jupyter/2d RL example.ipynb
+++ b/jupyter/2d RL example.ipynb
@@ -68,8 +68,6 @@
     "subplots = fig, ax = plt.subplots(1, 1, figsize=(10, 10))\n",
     "\n",
     "plt.ion()\n",
-    "ax.set_xlim((-2.1, 2.1))\n",
-    "ax.set_ylim((-2.1, 2.1))\n",
     "ax.grid(True)\n",
     "\n",
     "fig.canvas.draw()\n",
@@ -83,15 +81,23 @@
     "policy_config = {\n",
     "    \"mode\": \"train\",\n",
     "    \"D_in\": 2,\n",
-    "    \"learning_rate\": 5e-4,\n",
+    "    \"learning_rate\": 1e-3,\n",
     "    \"squash\": True,\n",
     "    \"real_nvp_config\": {\n",
     "        \"scale_regularization\": 1e-5,\n",
     "        \"num_coupling_layers\": 2,\n",
-    "        \"translation_hidden_sizes\": (16,),\n",
-    "        \"scale_hidden_sizes\": (16,),\n",
+    "        \"translation_hidden_sizes\": (64,),\n",
+    "        \"scale_hidden_sizes\": (64,),\n",
     "    }\n",
     "}\n",
+    "\n",
+    "if policy_config['squash']:\n",
+    "    ax.set_xlim((-1.1, 1.1))\n",
+    "    ax.set_ylim((-1.1, 1.1))\n",
+    "else:\n",
+    "    ax.set_xlim((-2.1, 2.1))\n",
+    "    ax.set_ylim((-2.1, 2.1))\n",
+    "    \n",
     "\n",
     "example = RealNVP2dRlExample(subplots,\n",
     "                             WEIGHTS, MEANS, VARIANCES,\n",
