--- a/jupyter/2d RL example.ipynb
+++ b/jupyter/2d RL example.ipynb
@@ -83,7 +83,7 @@
     "    \"D_in\": 2,\n",
     "    \"learning_rate\": 1e-3,\n",
     "    \"squash\": True,\n",
-    "    \"real_nvp_config\": {\n",
+    "    \"bijector_config\": {\n",
     "        \"prior_regularization\": 1e-5,\n",
     "        \"num_coupling_layers\": 2,\n",
     "        \"translation_hidden_sizes\": (64,),\n",
