Reword scale_regularization -> prior_regularization

--- a/jupyter/2d RL example.ipynb
+++ b/jupyter/2d RL example.ipynb
@@ -84,7 +84,7 @@
     "    \"learning_rate\": 1e-3,\n",
     "    \"squash\": True,\n",
     "    \"real_nvp_config\": {\n",
-    "        \"scale_regularization\": 1e-5,\n",
+    "        \"prior_regularization\": 1e-5,\n",
     "        \"num_coupling_layers\": 2,\n",
     "        \"translation_hidden_sizes\": (64,),\n",
     "        \"scale_hidden_sizes\": (64,),\n",
