--- a/jupyter/Real NVP unsupervised example.ipynb
+++ b/jupyter/Real NVP unsupervised example.ipynb
@@ -119,7 +119,7 @@
     "  \"learning_rate\": 5e-3,\n",
     "}\n",
     "real_nvp_config = {\n",
-    "  \"scale_regularization\": 0.0,\n",
+    "  \"prior_regularization\": 0.0,\n",
     "  \"num_coupling_layers\": 4,\n",
     "  \"translation_hidden_sizes\": (25,),\n",
     "  \"scale_hidden_sizes\": (25,)\n",
